--- a/technews.html
+++ b/technews.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="techtopics.css">
+    <link rel="stylesheet" href="technews.css">
     <title>Tech Topics</title>
 </head>
 <body>
@@ -15,11 +15,11 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li>
                         <a href="#news">News <i class="fa-solid fa-angle-down"></i></a>
                         <ul class="sub-menu">
-                            <li><a href="#news">News</a></li>
+                            <li><a href="technews.html">News</a></li>
                             <li><a href="#community">Tech Community</a></li>
                             <li><a href="#tools">Tech Tools</a></li>
                         </ul>
@@ -247,11 +247,19 @@
                     <h3>Quick Links</h3>
                     <ul>
                         <li><a href="#home">Home</a></li>
-                        <li><a href="#news">News</a></li>
                         <li><a href="#products">Products</a></li>
-                        <li><a href="#community">Community</a></li>
                         <li><a href="#leaarning">Learning</a></li>
                         <li><a href="#innovation">Innovation</a></li>
+        
+                    </ul>
+                </div>
+                <div class="footer-section links">
+                    <h3>Tech Topics</h3>
+                    <ul>
+                        <li><a href="#">News</a></li>
+                        <li><a href="#">Articles</a></li>
+                        <li><a href="#">Community</a></li>
+                        <li><a href="#">Tech tools</a></li>
         
                     </ul>
                 </div>
