--- a/form.html
+++ b/form.html
@@ -3,38 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup Form</title>
+    <title>Registration Form</title>
     <link rel="stylesheet" href="form.css">
 </head>
 <body>
     <div class="container">
-        <header>
-            <div class="logo">
-                <img src="/images/logo.png" alt="Logo" height="100px" width="200px">
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li>
-                        <a href="#news">News <i class="fa-solid fa-angle-down"></i></a>
-                        <ul class="sub-menu">
-                            <li><a href="technews.html">News</a></li>
-                            <li><a href="#community">Tech Community</a></li>
-                            <li><a href="#tools">Tech Tools</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#products">Products</a></li>
-                    <li><a href="#community">Community</a></li>
-                    <li><a href="#resources">Resources</a></li>
-                    <li><a href="#innovation">Innovation</a></li>
-                    <a href="#" id="btn">Subscribe</a>
-                </ul>
-            </nav>
-        </header>
+       <div class="image">
+        <img src="images/logo.png" height="140px", width="400px" style="border-top-left-radius: 10px;border-top-right-radius: 10px;">
+       </div>
 
         <div class="containers">
             <form id="signupForm">
-                <h2>Sign Up</h2>
+                <h2>Register here</h2>
                 <div class="input-group">
                     <label for="username">Username:</label>
                     <input type="text" id="username" name="username" required>
@@ -51,55 +31,13 @@
                     <label for="confirmPassword">Confirm Password:</label>
                     <input type="password" id="confirmPassword" name="confirmPassword" required>
                 </div>
-                <button type="submit" id="sign">Sign Up</button>
-                <div class="rg"><a href="login form.html">Already registered >>></a></div>
+                <button type="submit" id="sign"><a href="loginform.html">Sign Up</a></button>
+                <div class="rg">Already have account-<a href="loginform.html">   Login here!</a></div>
                 <div id="error-message"></div> 
             </form>
         </div>
 
-        <footer>
-            <div class="footer-content">
-                <div class="footer-section about" style="text-align: left;">
-                    <h3>About TechInnovate</h3>
-                    <p>TechInnovate is your go-to platform for the latest news, reviews, and insights in the world of technology.</p>
-                    <div class="icons">
-                        <p>Follow us on...</p><br>
-                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-                <div class="footer-section links">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#products">Products</a></li>
-                        <li><a href="#learning">Learning</a></li>
-                        <li><a href="#innovation">Innovation</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section links">
-                    <h3>Tech Topics</h3>
-                    <ul>
-                        <li><a href="#">News</a></li>
-                        <li><a href="#">Articles</a></li>
-                        <li><a href="#">Community</a></li>
-                        <li><a href="#">Tech tools</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section contact" style="text-align: left;">
-                    <h3>Contact Us</h3>
-                    <p>Email: contact@techinnovate.com</p>
-                    <p>Phone: +123-456-7890</p>
-                    <p>Address: 123 Tech Street, Innovate City, IN 12345</p>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2024 TechInnovate. All rights reserved.</p>
-            </div>
-        </footer>
-    </div>
+       
     <script src="home.js"></script>
     <script>
         document.getElementById('signupForm').addEventListener('submit', function(event) {
